--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "takeoto/message": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
